segregated benchmark runners into folder and added / moved utils scripts